--- a/web/index.html
+++ b/web/index.html
@@ -18,20 +18,64 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A ui engine for surveyjs">
+  <meta name="description" content="We provides Exact Ranking of Engineering Colleges,On the based of different survey by expert panel">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="surveyjs_projile">
+  <meta name="apple-mobile-web-app-title" content="studyinbangalore">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>surveyjs_projile</title>
+  <title>studyinbangalore</title>
   <link rel="manifest" href="manifest.json">
+  <style>
+        .loading {
+          display: flex;
+          flex-flow: column;
+          justify-content: center;
+          align-items: center;
+          margin: 0;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+        }
 
+        .loader {
+          border: 8px solid #f3f3f3;
+          border-radius: 50%;
+          border-top: 8px solid #2C1D21;
+          border-right: 8px solid #BC8F8F;
+          border-bottom: 8px solid #2C1D21;
+          border-left: 8px solid #BC8F8F;
+          width: 60px !important;
+          height: 60px !important;
+          -webkit-animation: spin 2s linear infinite;
+          animation: spin 2s linear infinite;
+        }
+
+        @-webkit-keyframes spin {
+          0% {
+            -webkit-transform: rotate(0deg);
+          }
+          100% {
+            -webkit-transform: rotate(360deg);
+          }
+        }
+
+        @keyframes spin {
+          0% {
+            transform: rotate(0deg);
+          }
+          100% {
+            transform: rotate(360deg);
+          }
+        }
+  </style>
   <script>
     // The value below is injected by flutter build, do not touch.
     var serviceWorkerVersion = null;
@@ -40,18 +84,30 @@
   <script src="flutter.js" defer></script>
 </head>
 <body>
-  <script>
+<!-- First time loading -->
+<div class="loading">
+  <div class="loader"></div>
+</div>
+
+<!-- Ensure first time loading progress is gone after app loads -->
+<script>
+      window.addEventListener("flutter-first-frame", function() {
+          var element = document.getElementsByClassName("loading");
+          element[0].parentNode.removeChild(element[0]);
+      });
+  </script>
+
+<script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
       _flutter.loader.loadEntrypoint({
         serviceWorker: {
           serviceWorkerVersion: serviceWorkerVersion,
-        },
-        onEntrypointLoaded: function(engineInitializer) {
-          engineInitializer.initializeEngine().then(function(appRunner) {
-            appRunner.runApp();
-          });
         }
+      }).then(function(engineInitializer) {
+        return engineInitializer.initializeEngine();
+      }).then(function(appRunner) {
+        return appRunner.runApp();
       });
     });
   </script>
